made updates to styling

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -50,7 +50,7 @@
 .about__card:hover{
 
     background: transparent;
-    border-color: var(--color-primary);
+    border-color: var(--color-bg-variant);
     cursor: default;
 }
 
@@ -76,6 +76,7 @@
 
     margin: 2rem 0 2.6rem;
     color: var(--color-light);
+    //color: var(--color-light);
 }
 
 /* Media queries for medium devices(Tablets) */
