--- a/src/components/contacts/contacts.css
+++ b/src/components/contacts/contacts.css
@@ -26,7 +26,7 @@
 .contact__option:hover{
 
     background: transparent;
-    border-color: var(--color-primary-variant);
+    border-color: var(--color-bg-variant);
 }
 
 .contact__option-icon{
@@ -57,7 +57,7 @@ input, textarea{
     padding: 1.5rem;
     border-radius: .5rem;
     background: transparent;
-    border: 2px solid var(--color-primary-variant);
+    border: 2px solid var(--color-bg-variant);
     resize: none; /* avoid text area being resized */
     color: var(--color-bg-variant);
 }
