--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -17,7 +17,7 @@
 .experience__container > div:hover{
 
     background: transparent;
-    border-color: var(--color-primary-variant);
+    border-color: var(--color-bg-variant);
     cursor: default;
 }
 
