--- a/src/components/myprojects/myprojects.css
+++ b/src/components/myprojects/myprojects.css
@@ -17,7 +17,7 @@
 
 .portfolio__item:hover{
 
-    border-color: var(--color-primary-variant);
+    border-color: var(--color-bg-variant);
     background: transparent;
 }
 
